# ObjcClassNameObfuscator

./: README.md
clang-obfuscator/: CMakeLists.txt  obfuscator.cpp  obfuscator.h
